# fizteh_search_similar_images

./: CMakeLists.txt  constants.h  dct_hash.h  hash_functions.h  image_process.h  main.cpp  perception_hash.h  steady_timer.h  task_queue.h  task_queue.hpp  thread_safe_queue.h  thumbnail.h  try_boost.cpp
thread_pool/: mutex_guard.h  task_queue.h  task_queue.hpp  thread_guard.h  thread_safe_queue.h
